Updates on images

--- a/src/app/components/final/final.component.scss
+++ b/src/app/components/final/final.component.scss
@@ -4,6 +4,6 @@
 }
 
 .example-header-image {
-  background-image: url('/assets/succ.jpg');
+  background-image: url('/student/assets/succ.jpg');
   background-size: cover;
 }
