--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -1,6 +1,6 @@
 <div class="mainCont">
   <div class="formCont">
-    <img src="/assets/logomig.jpg" alt="" />
+    <img src="./assets/logomig.jpg" alt="" />
     <h2>Bursary Application</h2>
     <br />
     <div class="formCont">
