--- a/src/app/components/final/final.component.html
+++ b/src/app/components/final/final.component.html
@@ -4,7 +4,7 @@
     <mat-card-title>{{data['name']}}</mat-card-title>
     <mat-card-subtitle>Ward : {{data['ward']}}</mat-card-subtitle>
   </mat-card-header>
-  <img mat-card-image src="/assets/succ.jpg" alt="Success">
+  <img mat-card-image src="./assets/succ.jpg" alt="Success">
   <mat-card-content>
     <p>
       Dear {{data['name']}},
