--- a/src/app/components/inv-form/inv-form.component.scss
+++ b/src/app/components/inv-form/inv-form.component.scss
@@ -1,5 +1,5 @@
 ::ng-deep body {
-  background-image: url("/assets/4372417.jpg");
+  background-image: url("/students/assets/4372417.jpg");
   background-size: cover;
 }
 
