--- a/src/app/components/inv-form/inv-form.component.scss
+++ b/src/app/components/inv-form/inv-form.component.scss
@@ -1,30 +1,45 @@
 ::ng-deep body {
-  background-image: url("/students/assets/4372417.jpg");
+  background-image: url("/assets/8767770.jpg");
+
   background-size: cover;
 }
 
 .mainCont {
   // margin-top: 20px;
-  width: 80%;
+  width: 95%;
   height: fit-content;
   margin: 2rem auto;
   box-shadow: black;
   // border: 2px solid;
   // border-radius: 10px;
 
+  h2{
+    color: #000;
+    padding: .3rem;
+    font-weight: 900;
+    text-align: center;
+    background: #fff;
+  }
+
   form {
     display: flex;
     flex-direction: column;
   }
 
+
+
   .itemCont {
+
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
+    width: 100%;
+    padding: 1rem;
 
     div {
       width: 100%;
+
       ::ng-deep mat-form-field {
         width: 100%;
         margin: 0 3px;
@@ -32,7 +47,7 @@
     }
 
     ::ng-deep mat-form-field {
-      width: 48%;
+      // width: 48%;
       margin: 0 3px;
     }
   }
@@ -61,6 +76,8 @@
     background-size: cover;
     border-bottom: 1px solid;
     margin-bottom: 0.5rem;
+    background-image: url("/assets/4372417.jpg");
+    background-size: cover;
 
     img {
       flex: 2;
@@ -75,6 +92,7 @@
       flex-direction: column;
       width: 100%;
       margin: 1rem;
+
       div {
         display: flex;
         justify-content: space-between;
@@ -84,6 +102,7 @@
         border: 1px solid lightgrey;
         padding: 0.5rem;
         border-radius: 8px;
+        background: #fff;
 
         .succ {
           color: green;
