--- a/src/app/components/landing/landing.component.scss
+++ b/src/app/components/landing/landing.component.scss
@@ -1,5 +1,5 @@
 ::ng-deep body {
-  background-image: url("/students/assets/landing1.jpg");
+  background-image: url("/assets/landing1.jpg");
   background-size: cover;
 }
 
