Updates on admin link

--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -38,6 +38,12 @@
           <a routerLink="/apply"> Proceed </a>
         <!-- </p> -->
       </button>
+      <hr>
+      <div>
+        <button mat-raised-button color="primary">
+            <a href="https://mig-bursary.com/admin/login"> Admin Login </a>
+        </button>
+      </div>
     </div>
   </div>
 </div>
