--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -32,12 +32,12 @@
         <a routerLink="/apply"> Proceed </a>
         <!-- </p> -->
       </button>
-      <div class="mt-4 d-flex flex-column align-items-center ">
-        <p>
-          Are you an admin ?
+      <hr>
+      <div class="adminLoginCont">
+        <p class="m-0">
+          Are you an admin?
         </p>
-        <hr>
-        <button mat-raised-button class="btn btn-sm" color="secondary">
+        <button mat-raised-button color="primary">
           <a href="https://mig-bursary.com/admin/login"> Admin Login </a>
         </button>
       </div>
