--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -38,7 +38,7 @@
           Are you an admin?
         </p>
         <button mat-raised-button color="primary">
-          <a href="https://mig-bursary.com/admin/login"> Admin Login </a>
+          <a href="https://mig-burs.com/admin/login"> Admin Login </a>
         </button>
       </div>
     </div>
